<?xml version="1.0" encoding="utf-8"?>
<org.kymjs.blog.ui.widget.KJScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/find_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/more_style_bg" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/find_img_zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/user_center_bg"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY" />

        <org.kymjs.kjframe.widget.RoundImageView
            android:id="@+id/find_img_head"
            android:layout_width="@dimen/space_65"
            android:layout_height="@dimen/space_65"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/default_head" />

        <TextView
            android:id="@+id/find_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <!-- 整体菜单网格 -->

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/find_img_zone" >

            <!-- 画列分割线 (如果是三行就是362) -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="242.0dip"
                android:orientation="horizontal" >

                <View
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_more_line_3" />

                <View
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_more_line_3" />

                <TextView
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <!-- 每行数据 -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <!-- 第一行数据 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="120.0dip"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null" >

                        <TextView
                            android:id="@+id/find_plugin_1"
                            style="@style/textview_more"
                            android:drawableTop="@drawable/selector_mine_tweet"
                            android:text="@string/tweet" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null" >

                        <TextView
                            android:id="@+id/find_plugin_2"
                            style="@style/textview_more"
                            android:drawableTop="@drawable/selector_mine_news"
                            android:text="@string/today_message" />

                        <ImageView
                            android:id="@+id/find_plugin_tip"
                            android:layout_width="8.0dip"
                            android:layout_height="8.0dip"
                            android:layout_alignRight="@+id/find_plugin_2"
                            android:layout_alignTop="@+id/find_plugin_2"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/bg_count_tip"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null" >

                        <TextView
                            android:id="@+id/find_plugin_3"
                            style="@style/textview_more"
                            android:drawableTop="@drawable/selector_mine_joke"
                            android:text="@string/osc_joke" />
                    </RelativeLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_more_line_2" />

                <!-- 第二行数据 -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="120.0dip"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null" >

                        <TextView
                            android:id="@+id/find_plugin_4"
                            style="@style/textview_more"
                            android:drawableTop="@drawable/selector_mine_active"
                            android:text="@string/monkey_active" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null" >

                        <TextView
                            android:id="@+id/find_plugin_5"
                            style="@style/textview_more"
                            android:drawableTop="@drawable/selector_mine_advertise"
                            android:text="@string/follow" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="0.0dip"
                        android:layout_height="fill_parent"
                        android:layout_weight="1.0"
                        android:background="@null" >

                        <TextView
                            android:id="@+id/find_plugin_6"
                            style="@style/textview_more"
                            android:drawableTop="@drawable/selector_mine_sticky"
                            android:text="@string/sticky" />
                    </RelativeLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_more_line_2" />
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

</org.kymjs.blog.ui.widget.KJScrollView>